EveryPicture/style.css
/*Fonts*/
:root {
    --sliderwidth: ;
}

@font-face {
font-family: 'Melodrama-Light';
src: url('../fonts/Melodrama-Light.woff2') format('woff2'),
        url('../fonts/Melodrama-Light.woff') format('woff'),
        url('../fonts/Melodrama-Light.ttf') format('truetype');
        font-weight: 300;
        font-display: swap;
        font-style: normal;
}

@font-face {
font-family: 'Melodrama-Regular';
src: url('../fonts/Melodrama-Regular.woff2') format('woff2'),
        url('../fonts/Melodrama-Regular.woff') format('woff'),
        url('../fonts/Melodrama-Regular.ttf') format('truetype');
        font-weight: 400;
        font-display: swap;
        font-style: normal;
}

@font-face {
font-family: 'Melodrama-Bold';
src: url('../fonts/Melodrama-Bold.woff2') format('woff2'),
        url('../fonts/Melodrama-Bold.woff') format('woff'),
        url('../fonts/Melodrama-Bold.ttf') format('truetype');
        font-weight: 700;
        font-display: swap;
        font-style: normal;
}

@keyframes moveSlider {
    from { left: 0; }
    to { left: var(--sliderwidth) }
}
.animate {
    animation-name: moveSlider;
    animation-duration: 45s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

body{
    background-color: rgb(255, 248, 239);
    max-height: 100vh;
    overflow-x: hidden;
}

h1{
    font-family: 'Melodrama', serif;
    font-style: normal;
    font-weight: 700;
    font-size: 4em;
    line-height: 101px;
    text-align: center;
    margin: 0;
    z-index: 9999;
}

#ellipse{
    width: 100vw;
    position: absolute;
    z-index: 2;
    top: 6em;
    margin: 0px;
    left: 0;
}

#ellipse img{
    width: 100vw;
}

/*Nav Bar*/

.topnav {
    margin-top: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 9999;
}

.topnav a{
    font-family: 'Melodrama', serif;
    font-size: 40px;
    text-decoration: none;
    color: black;
}

/*Nav Bar Interaction*/
.topnav a:hover {
    color: gray;
}

/*Hero*/

.content{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 0px;
    gap: 100px;
}

/*Hero text alignment*/

.text_box{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 30px;
    margin-top: 180px;
}

.heading{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
}

.subheading{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    width: 90vw;
}

.subheading h2{
    font-family: 'Satoshi';
    font-style: normal;
    font-weight: 400;
    font-size: 1.1em;
    line-height: 1.5em;
    text-align: center;
}

/*Graphics Box*/

#one{
    width: 100%;
    overflow-x: hidden;
    height: 400px;
    margin-top: 1em;
}

.slider {
    display: flex;
    position: absolute;
    top: 100px;
    left: 0; /* this is the only change! */
    height: 600px;
    /* transition: all 60s linear; */
}

.sliderpaused {
    display: flex;
    position: absolute;
    top:0;
    /*right: 0;  this is the only change! */
    height: 600px;
}

.slider div img {
    height: 100%;
    display: block;
    margin-right: 20px;
}

.a, .b {
   display: flex;
   height: 100%;
}

.a img{
    display: block;
    height: 100%;
    margin-right: 10px;
}

/* Footer */

footer{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0px;
}

#link{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0px 60px;
    gap: 2px;
    /* margin-top: 5vh;
    margin-bottom: 5vh; */
}

#link a{
    font-family: 'Satoshi';
    font-size: 1em;
    text-align: center;
    text-decoration: none;
    color: #6a6a6a;
}

#link a:hover{
    color:black;
}

@media only screen and (min-width: 600px) {
    body{
        background-color: rgb(255, 248, 239);
    }
    
    h1{
        font-family: 'Melodrama', serif;
        font-style: normal;
        font-weight: 700;
        font-size: 5em;
        line-height: 101px;
        text-align: center;
        margin: 0;
        z-index: 9999;
    }
    /*Nav Bar*/
    
    .topnav {
        margin-top: 20px;
        display: flex;
        align-items: center;
        justify-content: center;
        z-index: 9999;
    }
    
    .topnav a{
        font-family: 'Melodrama', serif;
        font-size: 20px;
        text-decoration: none;
        color: black;
    }
    
    /*Nav Bar Interaction*/
    #ellipse{
        width: 100vw;
        height: auto;
        position: absolute;
        z-index: 2;
        top: -230px;
    }

    #ellipse img{
        width: 100vw;
    }
    
    /*Hero*/
    #one{
        width: 100%;
        overflow-x: hidden;
        height: 40vh;
    }
    
    .slider {
        display: flex;
        position: absolute;
        top: 100px;
        left: 0; /* this is the only change! */
        height: 60vh;
        /* transition: all 60s linear; */
    }
    
    .sliderpaused {
        display: flex;
        position: absolute;
        top:0;
        /*right: 0;  this is the only change! */
        height: 40vh;
    }
    
    .slider div img {
        height: 100%;
        display: block;
        margin-right: 20px;
    }
    
    .a, .b {
       display: flex;
       height: 100%;
    }
    
    .a img{
        display: block;
        height: 100%;
        margin-right: 10px;
    }
    /*Hero text alignment*/
    
    .text_box{
        display: flex;
        flex-direction: column;
        align-items: center;   
    }
    
    .heading{
        display: flex;
        flex-direction: row;
        align-items: flex-start;
    }
    
    .subheading{
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        width: 50vw;
    }
    
    .subheading h2{
        font-family: 'Satoshi';
        font-style: normal;
        font-weight: 400;
        font-size: 1.05em;
        line-height: 1.5em;
        text-align: center;
    }
    
}

